third_party/rust/cxx/v1/crate/tests/ui/unique_ptr_to_opaque.stderr
error[E0271]: type mismatch resolving `<outside::C as ExternType>::Kind == Trivial`
  --> tests/ui/unique_ptr_to_opaque.rs:22:5
   |
22 |     cxx::UniquePtr::new(outside::C { a: 4 });
   |     ^^^^^^^^^^^^^^^^^^^ type mismatch resolving `<outside::C as ExternType>::Kind == Trivial`
   |
note: expected this to be `Trivial`
  --> tests/ui/unique_ptr_to_opaque.rs:8:21
   |
8  |         type Kind = cxx::kind::Opaque;
   |                     ^^^^^^^^^^^^^^^^^
note: required by a bound in `UniquePtr::<T>::new`
  --> src/unique_ptr.rs
   |
   |         T: ExternType<Kind = Trivial>,
   |                       ^^^^^^^^^^^^^^ required by this bound in `UniquePtr::<T>::new`
